--- a/MyTrips/app/src/main/res/values/strings.xml
+++ b/MyTrips/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="search_hint">Find your travels</string>
+    <string name="app_label">Trips</string>
     <string name="app_name">My Trips</string>
     <string name="app_slogan_begin">Create your</string>
     <string name="app_slogan_end"> beautiful memories</string>
