--- a/MyTrips/app/src/main/res/values/strings.xml
+++ b/MyTrips/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="title_toolbar_add_travel">New Travel</string>
     <string name="button_txt_add">Add</string>
     <string name="button_txt_edit">Change</string>
-    <string name="title_dialog_delete_travel">Are you sure want to delete this entry?</string>
+    <string name="title_dialog_delete_item">Are you sure want to delete this entry?</string>
     <string name="tab_plan">PLANs</string>
     <string name="tab_diary">diary</string>
     <string name="tab_expense">expense</string>
@@ -29,6 +29,15 @@
     <string name="warn_empty_plan_place">Please choose a place.</string>
     <string name="title_toolbar_add_plan">New Plan</string>
     <string name="title_toolbar_edit_plan">Edit Plan</string>
+    <string name="title_toolbar_add_diary">New Diary</string>
+    <string name="title_toolbar_edit_diary">Edit Diary</string>
+    <string name="title_toolbar_add_expense">New Expense</string>
+    <string name="title_toolbar_edit_expense">Edit Expense</string>
+    <string name="warn_empty_exp_title">Expense title is empty</string>
+    <string name="warn_empty_exp_place">Please choose a place.</string>
     <string name="no_google_map">There are no Google Maps APPs.</string>
-
+    <string name="permission_dialog_title">Please grant those permissions</string>
+    <string name="permission_camera_gallery">Write External Storage permissions are required to do the task.</string>
+    <string name="permission_camera_msg">Camera and Write External Storage permissions are required to do the task.</string>
+    <string name="permission_not_granted">The required permissions are not approved.</string>
 </resources>
